--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -51,38 +51,38 @@
                     @if (Model.IsEmployerAddressValid)
                     {
                         <label data-target="location-type-main-location-panel" for="location-type-main-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
-                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, true, new { id = "location-type-main-location", aria_controls = "location-type-main-location-panel" })
+                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, true, new {id = "location-type-main-location", aria_controls = "location-type-main-location-panel"})
                             Yes, this will be the vacancy location
                         </label>
                         <label data-target="location-type-different-location-panel" for="location-type-different-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
-                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new { id = "location-type-different-location", aria_controls = "location-type-different-location-panel" })
+                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new {id = "location-type-different-location", aria_controls = "location-type-different-location-panel"})
                             No, I need to add a different location
                         </label>
-                        <br />
-                        <br />
                         <div id="location-type-main-location-panel" class="toggle-content blocklabel-content location">
                             @Html.FormTextFor(model => model.NumberOfPositions, controlHtmlAttributes: new { type = "text", @class = "form-control-small", @maxlength = "5", size = 12, id = "NumberOfPositionsJS", Name = "NumberOfPositionsJS" }, labelHtmlAttributes: new { @class = "bold-small" })
                             @Html.EditorFor(m => m.NumberOfPositionsComment, "Comment", Html.GetLabelFor(m => m.NumberOfPositionsComment))
                         </div>
-                        <a name="@Html.NameFor(m => m.IsAnonymousEmployer).ToString().ToLower()"></a>
-                        <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
-                        <label data-target="is-non-anonymous-employer-panel" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                            @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "is-non-anonymous-employer", aria_controls = "is-non-anonymous-employer-panel" })
-                            Yes
-                        </label>
-                        <label data-target="is-anonymous-employer-panel" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                            @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "is-anonymous-employer", aria_controls = "is-anonymous-employer-panel" })
-                            No, the employer wants to remain anonymous
-                        </label>
                     }
                     else
                     {
                         <label data-target="location-type-different-location-panel" for="location-type-different-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
-                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new { id = "location-type-different-location", aria_controls = "location-type-different-location-panel" })
+                            @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new {id = "location-type-different-location", aria_controls = "location-type-different-location-panel"})
                             Yes, but I need to complete the full address
                         </label>
                     }
                 </div>
+            </div>
+            <div class="hide-nojs">
+                <a name="@Html.NameFor(m => m.IsAnonymousEmployer).ToString().ToLower()"></a>
+                <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
+                <label data-target="is-non-anonymous-employer-panel" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
+                    @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "is-non-anonymous-employer", aria_controls = "is-non-anonymous-employer-panel" })
+                    Yes
+                </label>
+                <label data-target="is-anonymous-employer-panel" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
+                    @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "is-anonymous-employer", aria_controls = "is-anonymous-employer-panel" })
+                    No, the employer wants to remain anonymous
+                </label>
             </div>
         </div>
         <noscript>
