--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
@@ -45,7 +45,7 @@
 
             <legend class="heading-large">Personal details</legend>
 
-            <div class="panel-indent">
+            <div class="panel panel-border-narrow">
                 <p class="text">Any changes you make will be seen on draft or new applications. Submitted applications will continue to show your old details.</p>
             </div>
 
@@ -213,7 +213,7 @@
 
         <div class="tabbed-content @deleteAccountTabClass">
             <h2 class="heading-large" id="deleteAccountHeading">Delete your account</h2>
-            <div class="panel-indent">
+            <div class="panel panel-border-narrow">
                 <p class="text">If you are no longer interested in applying for apprenticeships or traineeship, you can delete your account here.</p>
             </div>
             @Html.FormTextFor(
