--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
@@ -42,7 +42,7 @@
     <div class="text">
         @Html.HiddenFor(m => m.VacancyDetail.Title)
         @Html.HiddenFor(m => m.VacancyDetail.VacancyReference)
-        <div class="panel-indent">
+        <div class="panel panel-border-narrow">
             <p class="para-btm-margin hide-print">Check your answers before submitting and make sure they're relevant to the apprenticehip: <b>@Model.VacancyDetail.Title</b>.
             <p class="para-btm-margin toggle-content hide-nojs show-print">Application for <b>@Model.VacancyDetail.Title</b></p>
             <p class="para-btm-margin toggle-content hide-nojs show-print">Apprenticeship reference number: <b>@Model.VacancyDetail.VacancyReference</b></p>
