--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
@@ -400,7 +400,7 @@
     <div class="form-group text" id="appTourAbout">
         <details>
             <summary aria-controls="helpText" role="button" aria-expanded="false">Help with this section</summary>
-            <p class="panel-indent" id="helpText" role="region" aria-hidden="true">
+            <p class="panel panel-border-narrow" id="helpText" role="region" aria-hidden="true">
                 Think carefully about how you answer these questions. Where possible, keep the
                 vacancy that you're applying for in mind, and tailor your answers to
                 match the role.
@@ -462,7 +462,7 @@
         <div class="text">
             <details class="sfa-medium-bottom-margin">
                 <summary>Why we collect this info</summary>
-                <div class="detail-content panel-indent">
+                <div class="detail-content panel panel-border-narrow">
                     <p>
                         Employers who are part of the ‘Positive about disabled people’ scheme
                         will guarantee candidates an interview who meet the apprenticeship
@@ -488,7 +488,7 @@
                 <input checked name="support" type="radio" id="support-no">No
             </label>
         </div>
-        <div id="support-panel" class="panel-indent toggle-content" aria-hidden="true">
+        <div id="support-panel" class="panel panel-border-narrow toggle-content" aria-hidden="true">
             <span class="form-hint">Please provide details</span>
             <textarea id="question4" class="form-control" rows="4" data-val-length-max="4000"></textarea>
             <span class="form-hint">
