--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/NextSteps.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/NextSteps.cshtml
@@ -27,7 +27,7 @@
     <h3 class="heading-medium heading-with-check">
         <i class="font-large fa fa-users"></i>What the shortlisters say
     </h3>
-    <div class="panel-indent">
+    <div class="panel panel-border-narrow">
         <div class="sfa-medium-bottom-margin">
             <p>
                 <i class="fa fa-quote-left"></i>Good applicants have well-written
@@ -62,7 +62,7 @@
     </h3>
     <details>
         <summary>More details</summary>
-        <div class="detail-content panel-indent">
+        <div class="detail-content panel panel-border-narrow">
             <p>
                 Mistakes make employers think you haven’t taken the time to get things
                 right. They could be concerned about how you will communicate with
@@ -80,7 +80,7 @@
     </h3>
     <details>
         <summary>More details</summary>
-        <div class="detail-content panel-indent">
+        <div class="detail-content panel panel-border-narrow">
             <p>
                 Employers will be impressed if your application seems carefully considered,
                 and if you’ve made an effort to understand the role and what’s
@@ -98,7 +98,7 @@
     </h3>
     <details>
         <summary>More details</summary>
-        <div class="detail-content panel-indent">
+        <div class="detail-content panel panel-border-narrow">
             Employers want an apprentice who’s:
             <ul class="list-bullet sfa-medium-bottom-margin">
                 <li>reliable</li>
