--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Activation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Activation.cshtml
@@ -32,7 +32,7 @@
     @Html.HiddenFor(m => m.EmailAddress)
 }
 
-<div class="panel-indent text">
+<div class="panel panel-border-narrow text">
     <p>
         You must activate your account within 30 days of receiving your activation code.
         After 30 days your account will be deleted and you'll need to register again.
