--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Overview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Overview.cshtml
@@ -41,13 +41,13 @@
             </h2>
             <details>
                 <summary>More about qualifications</summary>
-                <div class="panel-indent detail-content">
+                <div class="panel panel-border-narrow detail-content">
                     <p>Level 2 qualifications are equivalent to 5 GCSEs (Grades A*-C).</p>
                     <p>Level 3 qualifications are equivalent to 2 or more A-levels.</p>
                 </div>
             </details>
         </div>
-        <div class="panel-indent">
+        <div class="panel panel-border-narrow">
             <p>
                 Traineeships are unpaid, but employers can sometimes pay expenses for
                 things like travel and meals.
