--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "_button-links";
 @import "_tabbed-nav";
 @import "_inline-search";
+@import "_link-styles";
 
 @import "_select2-styles";
 
