--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -8,7 +8,7 @@
     <div class="inner-block-padr">
         <section>
             <div >
-                <table class="no-btm-margin reactive">
+                <table class="sfa-table">
                     <colgroup>
                         <col>
                         <col>
