--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
@@ -154,7 +154,7 @@ else
                             <h2 class="heading-medium" id="dashUnsuccessful">Unsuccessful</h2>
                             if (Model.UnsuccessfulApplications.Any(a => a.ApplicationStatus == ApplicationStatuses.Unsuccessful))
                             {
-                                <div class="panel-indent font-xxsmall" id="candidate-support-message">
+                                <div class="panel panel-border-narrow font-xxsmall" id="candidate-support-message">
                                     <p>Some of your applications have been unsuccessful. Please contact the training provider for further information.</p>                                    
                                 </div>
                             }
