--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_ContactDetailsAndVacancyHistory.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_ContactDetailsAndVacancyHistory.cshtml
@@ -5,7 +5,7 @@
 {
     <details>
         <summary>Contact details and vacancy history</summary>
-        <div class="detail-content panel-indent">
+        <div class="detail-content panel panel-border-narrow">
             @Model.FullName<br />
             @Model.ProviderName<br />
             @Model.PhoneNumber<br />
