--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AnonymisedApplicantDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/AnonymisedApplicantDetails.cshtml
@@ -2,7 +2,7 @@
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.AnonymisedApplicantDetailsViewModel
 
 <section class="inner-block-padr">
-    <div class="panel-indent">
+    <div class="panel panel-border-narrow">
         <ul class="list-text">
             <li><span class="">Applicant ID:</span></li>
             <li>@Model.ApplicantId</li>
