--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
@@ -65,7 +65,7 @@
                 @Html.ValidationMessageFor(m => m.OfflineVacancy)
             </div>
             <div class="hide-js">Only answer if the vacancy applications will be managed through an external website:</div>
-            <div id="offline-panel" class="toggle-content panel-indent blocklabel-content">
+            <div id="offline-panel" class="toggle-content panel panel-border-narrow blocklabel-content">
                 <a name="@Html.NameFor(m => m.OfflineApplicationUrl).ToString().ToLower()"></a>
                 <div class="form-group">
                     @{
