--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
@@ -188,6 +188,25 @@ iframe, object, embed {
   position: absolute;
   left: -5000px; }
 
+a[rel="external"]:after {
+  background-image: url(../img/icon-external.svg);
+  background-repeat: no-repeat;
+  background-position: 3px .4em;
+  content: '     ';
+  background-size: .7em .6em; }
+
+.summary-style {
+  display: inline-block;
+  margin-left: 5px; }
+
+.summary-style:before {
+  content: '► ';
+  font-size: 16px;
+  display: inline-block;
+  margin-top: 1px;
+  margin-right: -1px;
+  width: 20px; }
+
 .select2-container {
   position: relative !important; }
 
