--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/EditorTemplates/AboutYouViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/EditorTemplates/AboutYouViewModel.cshtml
@@ -5,7 +5,7 @@
     <div class="form-group text">
         <details id="appTourAbout">
             <summary aria-controls="helpText" role="button" aria-expanded="false">Help with this section</summary>
-            <p class="panel-indent" id="helpText" role="region" aria-hidden="true">
+            <p class="panel panel-border-narrow" id="helpText" role="region" aria-hidden="true">
                 Think carefully about how you answer these questions. Where possible,
                 keep the apprenticeship that you're applying for in mind, and tailor your
                 answers to match the role.
