--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <h2 class="heading-medium">Use the new service</h2>
             <p>Find and apply for apprenticeships in England. You can create a new account if you haven’t got one.</p>
 
-            <div class="panel-indent">
+            <div class="panel panel-border-narrow">
                 <p>You won’t be able to sign in using your account details from the original service.</p>
             </div>
 
@@ -22,7 +22,7 @@
 
             <h2 class="heading-medium">Before you start</h2>
 
-            <div class="panel-indent">
+            <div class="panel panel-border-narrow">
                 <p>The application process is different in <a href="http://www.mappit.org.uk/" rel="external" target="_blank">Scotland</a>, <a href="http://www.nidirect.gov.uk/index/information-and-services/education-and-learning/14-19/starter-skills-16-18/apprenticeships.htm" rel="external" target="_blank">Northern Ireland</a> and <a href="https://ams.careerswales.com/Public/Default.aspx?mode=vacancy&type=ams" rel="external" target="_blank">Wales</a>.</p>
             </div>
 
