--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardTeamMetrics.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardTeamMetrics.cshtml
@@ -6,8 +6,8 @@
 <div class="column-full">
     <div class="inner-block-padr">
         <section>
-            <div class="tabbed-element tab1 active form-control-3-4 beepboop">
-                <table class="no-btm-margin reactive">
+            <div class="tabbed-element tab1 active">
+                <table class="sfa-table">
                     <colgroup>
                         <col>
                         <col>
