--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/ApplicantDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Application/ApplicantDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.ApplicantDetailsViewModel
 
 <section class="inner-block-padr">
-    <div class="panel-indent">
+    <div class="panel panel-border-narrow">
         <ul class="list-text">
             <li>@Model.Name</li>
         </ul>
