--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -49,7 +49,7 @@
         <p>Search for an employer</p>
         @if (!(searchPerformed && noResults))
         {
-            <div class="panel-indent grid column-two-thirds">
+            <div class="panel panel-border-narrow grid column-two-thirds">
                 If you can't find the employer you want to link to, login to <a href="https://edrs.lsc.gov.uk/security/login.aspx" target="_blank">EDS</a> to request an ERN
             </div>
         }
