--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -1,6 +1,13 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyLinksViewModel
 
+@if (Model.Status.CanCloseVacancy())
+{
+    <p class="small-btm-margin">
+        @Html.RouteLink("Close this vacancy", RecruitmentRouteNames.CloseVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+    </p>
+}
+
 @if (Model.Status.CanManageVacancyDates())
 {
     <p class="small-btm-margin">
