ra-509: fix typo

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CloseVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CloseVacancy.cshtml
@@ -31,7 +31,7 @@
     @Html.HiddenFor(m => m.VacancyDatesViewModel.VacancyStatus)
 
     <div>
-        You're vacancy will be closed immediately and will no longer be listed on Find<br/>
+        Your vacancy will be closed immediately and will no longer be listed on Find<br/>
         an apprenticeship
     </div>
     <br/>
